--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap');
+
 :root{
     --button-font-size: 1.2rem;
     --button-color: rgb(238, 238, 238);
@@ -10,9 +12,11 @@
     --hover-color: grey;
 
     --footer-background-color: rgb(235, 255, 224);
+    --font-family-main: 'Noto Sans KR', sans-serif;
 }
 
 body {
+    font-family: var(--font-family-main);
     min-height: 100vh;
     min-width: 100vw;
     display: flex;
@@ -29,6 +33,7 @@ body {
 }
 
 .header {
+    font-weight: 500;
     display: flex;
     height: 9rem;
     align-items: flex-end;
@@ -48,6 +53,7 @@ body {
 }
 
 textarea {
+    font-family: var(--font-family-main);
     padding: 5px;
     background-color: var(--text-area-background-color);
     border: 0px solid var(--border-color);
@@ -61,6 +67,8 @@ textarea:focus {
 }
 
 #replace-with {
+    font-weight: 400;
+    font-family: var(--font-family-main);
     text-align: center;
     border: 0px solid var(--border-color);
     border-radius: var(--border-radius);
@@ -73,6 +81,10 @@ textarea:focus {
 #replace-with:hover {
     transition: 0.5s;
     cursor: pointer;
+}
+
+option {
+    font-family: var(--font-family-main);
 }
 
 .filter-button {
@@ -91,9 +103,8 @@ textarea:focus {
     cursor: pointer;
 }
 
-.shake-animation:hover {
+.shake-animation {
     animation: shake 0.82s;
-    cursor: pointer;
 }
 
 @keyframes shake {
@@ -101,13 +112,13 @@ textarea:focus {
       transform: translate3d(-1px, 0, 0);
     }
     20%, 80% {
-      transform: translate3d(2px, 0, 0);
+      transform: translate3d(2px, 5px, 0);
     }
     30%, 50%, 70% {
-      transform: translate3d(-4px, 0, 0);
+      transform: translate3d(-4px, -4px, 0);
     }
     40%, 60% {
-      transform: translate3d(4px, 0, 0);
+      transform: translate3d(4px, 3px, 0);
     }
   }
 
@@ -124,4 +135,9 @@ textarea {
     background-color: var(--footer-background-color);
     width: 100%;
     height: 4.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1rem;
+    font-weight: 500;
 }
