--- a/style.css
+++ b/style.css
@@ -138,7 +138,6 @@ option {
 }
 
 textarea {
-    border-radius: ;
     font-size: 1.2rem;
     resize: none;
     width: auto;
@@ -160,4 +159,8 @@ textarea {
     justify-content: center;
     font-size: 1rem;
     font-weight: 500;
+}
+
+.disabled {
+    display: none;
 }
